--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -46,7 +46,7 @@
 </head>
    <style type="text/css">
         body{
-            background-color: #2c76c7;
+            background-color: #d2d4c8;
         }
     </style>
 <body>
