--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
     </style>
     <style type="text/css">
         body{
-            background-color: #2c76c7;
+            background-color: #d2d4c8;
         }
     </style>
 </head>
@@ -89,7 +89,7 @@
             <div class="input-group input-group-lg">
                 <input type="text" class="form-control" name="s" placeholder="Search for any place">
                 <span class="input-group-btn">
-                <button class="btn " style="padding: 0px 10px;background-color:black" type="submit"><img src="static/pic/search.png"><span class="glyphicon glyphicon-search"></span></button>
+                <button class="btn " style="padding: 0px 10px;background-color:#23ce6b" type="submit"><img src="static/pic/search.png"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
             </div><!-- /input-group -->
           </div><!-- /.col-lg-6 -->
